<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CPX</string>
    <string name="app_name_subtitle">Play Over Wi-Fi</string>
    <string name="app_version">Ver %s</string>
    <string name="btn_main_server">Became A Host</string>
    <string name="btn_main_client">Join</string>
    <string name="btn_start">Let\'s Play!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_reset">Reset</string>
    <string name="btn_ok">OK</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_share">Become A Host</string>
    <string name="btn_unshare">Disconnect</string>
    <string name="btn_disconnect">Disconnect</string>
    <string name="btn_refresh">Refresh List of Participant</string>
    <string name="btn_send">Send</string>
    <string name="btn_save">Save</string>
    <string name="btn_restart">Restart Game</string>
    <string name="tv_init_name">Please enter your name:</string>
    <string name="et_init_name">Name</string>
    <string name="bt_ok">OK</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_play">Play</string>
    <string name="bt_drop">Drop (%d)</string>
    <string name="hello_world">Hello world!</string>
    <string name="tv_main_connection_wait">Waiting server to start the game...</string>
    <string name="hint_share">Share note</string>
    <string name="prompt_server_ip">Server IP</string>
    <string name="dialog_disconnect">Whoops, Connection is closed</string>
    <string name="dialog_invalid_connection">Invalid Connection</string>
    <string name="title_activity_share_note">ShareNoteActivity</string>
    <string name="menu_save">Save</string>
    <string name="dialog_insert_name_id">Set Your Name </string>
    <string name="menu_load_note_history">Load Notes</string>
    <string name="title_participant_list">Participant List (%d)</string>
    <string name="title_chat">Chat %s</string>
    <string name="title_cpx">CPX</string>
    <string name="title_settings">Settings</string>
	<string name="no_server_available">No server available</string>
	<string name="search_available_server">Searching for server...</string>
	<string name="dialog_server_max_connection_reached">Server Maximum connection reached</string>
	<string name="main_title">CPX</string>
	<string name="participant_list_title">Participants (%d)</string>
	<string name="setting_id">Participant ID</string>
	<string name="setting_host">Host ID</string>
	<string name="wait_server_to_start">Waiting host to start the game</string>
	<string name="status_ok">OK</string>
	<string name="play_alone">Whoops..believe me, you don\'t want to play alone</string>
	<string name="error_card_empty">Sorry, we\'re running out of card</string>
	<string name="welcome_participant">Hey Ho, swipe to the left if you want to Chat with other participant</string>
	<string name="deck_count">Deck Count:</string>
	<string name="special_card">Activate Special Card</string>
	<string name="last_action">%1$s: %2$s</string>
	<string name="drop_value">Dropped: %d</string>
	<string name="drop_invalid">Errmm..think again</string>
	<string name="select_card">Please select card</string>
	<string name="invalid_card">whoops...invalid card</string>
	<string name="your_turn">Hey Ho, it\'s your turn now!</string>
	<string name="game_finish">Hey Ho, it\'s done, scoring now begin</string>
	<string name="player_score">%1$s (%2$d)</string>
	<string name="play_joker">Hold tight, we\'re now reversing...</string>
	<string name="set_action">Action</string>
	<string name="different_apk_key">Sorry, you\'re using different apk version</string>
	<string name="exchange_cards">Yup, cards exchanged</string>
	<string name="exchange_invalid">Yo..can\'t exchange to yourself</string>
	<string name="exchange_message">[%s] exchanged your card</string>
	<string name="rule">Game Rule</string>
	<string name="rule_deck_count">Deck count: %d</string>
	<string name="rule_special_card">Special Card: %s</string>
	<string name="loose">Whoops, sorry you loose</string>
	<string name="chat_update">[ Chat ] %s</string>
	<string name="participant_update">%s joined</string>
	<string name="participant_leave">%s leave</string>
	<string name="participant_leave_update_turn">Player list updated, play turn will be choosed randomly</string>

</resources>