<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llFragmentParticipantList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/tvSettingHostLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/setting_host" />

    <TextView
        android:id="@+id/tvSettingHostId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSettingHostLabel"
        android:layout_marginBottom="10dp"
        android:textStyle="bold"
        android:paddingLeft="10dp" />

    <TextView
        android:id="@+id/tvSettingId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSettingHostId"
        android:layout_marginBottom="5dp"
        android:text="@string/setting_id" />

    <EditText
        android:id="@+id/etSettingId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSettingId"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:id="@+id/llSettingButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btSettingCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/btn_reset" />

        <Button
            android:id="@+id/btSettingSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/btn_save" />
    </LinearLayout>

</RelativeLayout>