<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_color_header"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="right" >

            <Button
                android:id="@+id/btDisconnect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/selector_btn"
                android:padding="10dp"
                android:text="@string/btn_disconnect"
                android:textColor="@android:color/white" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp" >

        <LinearLayout
            android:id="@+id/llCpxCardMain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llCpxCardDeck"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <RelativeLayout
                android:id="@+id/llCpxCardScore"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_above="@+id/llCpxCardDeck"
                android:layout_weight="0.6"
                android:background="@drawable/rect_border"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/ivLastCard"
                    android:layout_width="60dp"
                    android:layout_height="80dp"
                    android:layout_alignParentTop="true"
                    android:layout_margin="5dp"
                    android:background="@drawable/rect_border"
                    android:scaleType="fitXY" />

                <TextView
                    android:id="@+id/tvCpxCardScore"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="99"
                    android:textColor="@android:color/white"
                    android:textSize="80dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvLastAction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="5dp"
                    android:textColor="@android:color/white" />
            </RelativeLayout>

            <ListView
                android:id="@+id/lvCpxCardParticipantList"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:divider="@color/line_color"
                android:dividerHeight="1dp"
                android:listSelector="@null"
                android:paddingLeft="5dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCpxCardDeck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llCpxCardDeckButton"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal" >

            <com.jess.ui.TwoWayGridView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/gvCards"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_gravity="center_vertical|center_horizontal"
                android:fadingEdge="horizontal"
                android:fadingEdgeLength="20dp"
                android:numColumns="auto_fit"
                android:scrollbars="horizontal"
                android:stretchMode="spacingWidthUniform"
                app:columnWidth="70dp"
                app:gravity="center"
                app:numColumns="auto_fit"
                app:numRows="1"
                app:rowHeight="70dp"
                app:scrollDirectionPortrait="horizontal" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCpxCardDeckButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnCpxCardDrop"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:background="@drawable/selector_btn_cpx_drop"
                android:text="@string/bt_drop"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCpxCardPlay"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.5"
                android:background="@drawable/selector_btn_cpx_play"
                android:text="@string/bt_play"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <Button
            android:id="@+id/btnCpxRestart"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/selector_btn"
            android:text="@string/btn_restart"
            android:layout_alignTop="@+id/llCpxCardDeckButton"
            android:textColor="@android:color/white"
            android:visibility="gone"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>